Add preview img

--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,19 @@
 		<!-- Primary Meta Tags -->
 		<meta name="title" content="SIR Model API | Simulate the epidemic model SIR">
 		<meta name="description" content="A free API that that simulates the epidemic model SIR. Accepts values for different parameters and responds in JSON format.">
-		<meta name="image" property="og:image" content="https://github.com/ijborda/covid19-statistics/blob/main/screenshot.png?raw=true">
+		<meta name="image" property="og:image" content="https://sir-epimodel-api.herokuapp.com/screenshot.png">
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://sir-epimodel-api.herokuapp.com">
 		<meta property="og:title" content="SIR Model API | Simulate the epidemic model SIR">
 		<meta property="og:description" content="A free API that that simulates the epidemic model SIR. Accepts values for different parameters and responds in JSON format.">
-		<meta property="og:image" content="screenshot.png">
+		<meta property="og:image" content="https://sir-epimodel-api.herokuapp.com/screenshot.png">
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://sir-epimodel-api.herokuapp.com">
 		<meta property="twitter:title" content="SIR Model API | Simulate the epidemic model SIR">
 		<meta property="twitter:description" content="A free API that that simulates the epidemic model SIR. Accepts values for different parameters and responds in JSON format.">
-		<meta property="twitter:image:src" content="screenshot.png">
+		<meta property="twitter:image:src" content="https://sir-epimodel-api.herokuapp.com/screenshot.png">
 		<!-- Add Favicon -->
 		<link rel="icon" href="favicon.ico">
     <!-- Math Jax -->
