Edit author and keywords

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 		<title>SIR Model API | Simulate the epidemic model SIR</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+    <!-- Metadata -->
+    <meta name="keywords" content="sir, math, api, epidemic, model">
+    <meta name="author" content="Imari Joy C. Borda">
     <!-- SocMed Previews -->
 		<!-- Primary Meta Tags -->
 		<meta name="title" content="SIR Model API | Simulate the epidemic model SIR">
