--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
 								</li>
 								<li>
 									<h3>Website</h3>
-									<a href="http://imarijoyborda.com/">imarijoyborda.com</a>
+									<a href="https://imarijoyborda.com/">imarijoyborda.com</a>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
